17 April 2008
+ Fixed notice warning.
+ Readded ability to limit folder view by module.

Version 1.7.2
----------------------------------------------------------------
8 April 2008
+ Can use media or image thumbnails on blog listing page.
+ Blog uses new key datetime terminators.
+ File Cabinet style sheet called regardless of cache.
+ Indicators added for published status.
+ Updated: templates/style.css. templates/view.tpl

Version 1.7.1
----------------------------------------------------------------
19 March 2008
+ Fixed update note. Thanks Verdon.

17 March 2008
+ Update was missing parameter when copying templates.

14 March 2008
+ Fixed forward after blog creation. Was using id instead of blog_id

5 March 2008
+ Fixed miniadmin showing to non-admins

26 February 2008
+ Removed redundant key drop from blog deletion.

22 February 2008
+ Publish date was rounding the minutes. This would lead to close
  posts not appearing in the correct order.
+ Changed the default date view to a shorter format. Removed seconds.
+ Italian translations

19 February 2008
+ Blog can list entries by date (month, year, or day)
+ Using new rewrite url format.
+ Calling new Cabinet::fileStyle function in case blog is cached.

Version 1.7.0
----------------------------------------------------------------
8 Feb 2008
+ Fixed call to getImage.

7 Feb 2008
+ If the link image url is blank, the link is reset to default.

5 February 2008
+ Raising version for next update
+ Added image_link column for extra image linking.
+ Should be compatible with FC changes.
+ Editing a blog sends you to the blog view when finished instead of
  the blog listing.
+ MiniAdmin has blog listing option when viewing a specific blog.
+ Updated: templates/edit.tpl

17 January 2008
+ Testing file cabinet in blog.
+ updated : templates/edit.tpl

Version 1.6.3
----------------------------------------------------------------
5 December 2007
+ Added open_window in case a cached page has a clickable image.

Version 1.6.2